// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Topbar > snapshot > should match the snapshot across all variants > citations 1`] = `
<div>
  <header
    class="flex h-10 shrink-0 items-center gap-2 border-b border-rule bg-paper px-3 md:gap-3 md:px-4"
    data-testid="topbar"
  >
    <button
      aria-label="Open navigation"
      class="inline-flex items-center justify-center rounded-md transition-colors h-7 w-7 text-ink-3 hover:bg-paper-2 hover:text-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink data-[state=open]:bg-paper-2 data-[state=open]:text-ink md:hidden"
      data-testid="topbar-open-nav"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-menu h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 5h16"
        />
        <path
          d="M4 12h16"
        />
        <path
          d="M4 19h16"
        />
      </svg>
    </button>
    <div
      class="flex min-w-0 items-center gap-1.5 font-serif text-[14px] text-ink-3"
    >
      <span
        class="hidden md:inline"
      >
        Test
      </span>
    </div>
    <div
      class="flex-1"
    />
    <span
      aria-disabled="true"
      class="relative max-w-full cursor-not-allowed items-center align-middle outline-none focus-visible:ring-1 focus-visible:ring-ink hidden md:inline-flex"
      data-coming-soon="true"
      data-state="closed"
      tabindex="0"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none inline-flex max-w-full items-center opacity-60"
      >
        <span
          aria-label="Find in doc"
          class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
        </span>
      </span>
    </span>
    <a
      aria-label="Citations"
      class="hidden items-center rounded-md px-2 py-1 font-sans text-[12px] lowercase transition-colors md:inline-flex text-ink hover:bg-paper-2"
      data-discover="true"
      data-testid="topbar-citations"
      data-tour="tour-topbar-citations"
      href="/s/s1/citations"
    >
      <span>
        cite
      </span>
    </a>
  </header>
</div>
`;

exports[`Topbar > snapshot > should match the snapshot across all variants > focus 1`] = `
<div>
  <header
    class="flex h-10 shrink-0 items-center gap-2 border-b border-rule bg-paper px-3 md:gap-3 md:px-4"
    data-testid="topbar"
  >
    <button
      aria-label="Open navigation"
      class="inline-flex items-center justify-center rounded-md transition-colors h-7 w-7 text-ink-3 hover:bg-paper-2 hover:text-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink data-[state=open]:bg-paper-2 data-[state=open]:text-ink md:hidden"
      data-testid="topbar-open-nav"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-menu h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 5h16"
        />
        <path
          d="M4 12h16"
        />
        <path
          d="M4 19h16"
        />
      </svg>
    </button>
    <div
      class="flex min-w-0 items-center gap-1.5 font-serif text-[14px] text-ink-3"
    >
      <button
        class="min-w-0 cursor-text truncate text-left font-medium text-ink hover:text-ink"
        data-testid="topbar-doc-name"
        title="Rename doc (double-click)"
        type="button"
      >
        Sample
      </button>
    </div>
    <div
      class="flex-1"
    />
    <div
      class="hidden items-center md:inline-flex"
      data-tour="tour-topbar-modes"
    >
      <nav
        class="inline-flex items-center font-mono text-[11px] gap-1"
      >
        <a
          aria-current="page"
          aria-label="write"
          class="inline-flex h-7 w-7 items-center justify-center rounded-md transition-colors text-ink"
          data-discover="true"
          data-state="closed"
          href="/s/s1/d/d1?focus=1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pencil h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
            />
            <path
              d="m15 5 4 4"
            />
          </svg>
        </a>
        <a
          aria-label="read"
          class="inline-flex h-7 w-7 items-center justify-center rounded-md transition-colors text-ink-4 hover:bg-paper-2 hover:text-ink-2"
          data-discover="true"
          data-state="closed"
          href="/s/s1/d/d1/read?focus=1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-book-open h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 7v14"
            />
            <path
              d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
            />
          </svg>
        </a>
        <a
          aria-label="split"
          class="h-7 w-7 items-center justify-center rounded-md transition-colors text-ink-4 hover:bg-paper-2 hover:text-ink-2 hidden md:inline-flex"
          data-discover="true"
          data-state="closed"
          href="/s/s1/d/d1/split?focus=1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-columns2 lucide-columns-2 h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M12 3v18"
            />
          </svg>
        </a>
        <a
          aria-label="space"
          class="inline-flex h-7 w-7 items-center justify-center rounded-md transition-colors text-ink-4 hover:bg-paper-2 hover:text-ink-2"
          data-discover="true"
          data-state="closed"
          href="/s/s1/brain-space?focus=1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-brain h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 18V5"
            />
            <path
              d="M15 13a4.17 4.17 0 0 1-3-4 4.17 4.17 0 0 1-3 4"
            />
            <path
              d="M17.598 6.5A3 3 0 1 0 12 5a3 3 0 1 0-5.598 1.5"
            />
            <path
              d="M17.997 5.125a4 4 0 0 1 2.526 5.77"
            />
            <path
              d="M18 18a4 4 0 0 0 2-7.464"
            />
            <path
              d="M19.967 17.483A4 4 0 1 1 12 18a4 4 0 1 1-7.967-.517"
            />
            <path
              d="M6 18a4 4 0 0 1-2-7.464"
            />
            <path
              d="M6.003 5.125a4 4 0 0 0-2.526 5.77"
            />
          </svg>
        </a>
      </nav>
    </div>
    <button
      aria-label="Citations"
      class="hidden h-7 w-7 items-center justify-center rounded-md transition-colors md:inline-flex text-ink-3 hover:bg-paper-2 hover:text-ink"
      data-state="closed"
      data-testid="topbar-citations"
      data-tour="tour-topbar-citations"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-quote h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
        <path
          d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
      </svg>
    </button>
    <a
      aria-label="Exit focus mode"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 hover:bg-paper-2 hover:text-ink"
      data-discover="true"
      data-state="closed"
      data-testid="focus-toggle"
      href="/s/s1/d/d1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minimize2 lucide-minimize-2 h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m14 10 7-7"
        />
        <path
          d="M20 10h-6V4"
        />
        <path
          d="m3 21 7-7"
        />
        <path
          d="M4 14h6v6"
        />
      </svg>
    </a>
  </header>
</div>
`;

exports[`Topbar > snapshot > should match the snapshot across all variants > write 1`] = `
<div>
  <header
    class="flex h-10 shrink-0 items-center gap-2 border-b border-rule bg-paper px-3 md:gap-3 md:px-4"
    data-testid="topbar"
  >
    <button
      aria-label="Open navigation"
      class="inline-flex items-center justify-center rounded-md transition-colors h-7 w-7 text-ink-3 hover:bg-paper-2 hover:text-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink data-[state=open]:bg-paper-2 data-[state=open]:text-ink md:hidden"
      data-testid="topbar-open-nav"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-menu h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 5h16"
        />
        <path
          d="M4 12h16"
        />
        <path
          d="M4 19h16"
        />
      </svg>
    </button>
    <div
      class="flex min-w-0 items-center gap-1.5 font-serif text-[14px] text-ink-3"
    >
      <span
        class="hidden md:inline"
      >
        Test
      </span>
      <span
        class="hidden text-ink-4 md:inline"
      >
        /
      </span>
      <button
        class="min-w-0 cursor-text truncate text-left font-medium text-ink hover:text-ink"
        data-testid="topbar-doc-name"
        title="Rename doc (double-click)"
        type="button"
      >
        Sample
      </button>
    </div>
    <div
      class="flex-1"
    />
    <div
      class="hidden items-center md:inline-flex"
      data-tour="tour-topbar-modes"
    >
      <nav
        class="inline-flex items-center font-mono text-[11px] gap-4"
      >
        <a
          class="pb-0.5 transition-colors border-b border-ink font-medium text-ink"
          data-discover="true"
          href="/s/s1/d/d1"
        >
          write
        </a>
        <a
          class="pb-0.5 transition-colors text-ink-4 hover:text-ink-2"
          data-discover="true"
          href="/s/s1/d/d1/read"
        >
          read
        </a>
        <a
          class="pb-0.5 transition-colors text-ink-4 hover:text-ink-2 hidden md:inline"
          data-discover="true"
          href="/s/s1/d/d1/split"
        >
          split
        </a>
        <a
          class="pb-0.5 transition-colors text-ink-4 hover:text-ink-2"
          data-discover="true"
          href="/s/s1/brain-space"
        >
          space
        </a>
      </nav>
    </div>
    <span
      aria-hidden="true"
      class="hidden h-3.5 w-px bg-rule md:inline-block"
    />
    <span
      aria-disabled="true"
      class="relative max-w-full cursor-not-allowed items-center align-middle outline-none focus-visible:ring-1 focus-visible:ring-ink hidden md:inline-flex"
      data-coming-soon="true"
      data-state="closed"
      tabindex="0"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none inline-flex max-w-full items-center opacity-60"
      >
        <span
          aria-label="Find in doc"
          class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
        </span>
      </span>
    </span>
    <button
      aria-label="Citations"
      class="hidden items-center rounded-md px-2 py-1 font-sans text-[12px] lowercase transition-colors md:inline-flex text-ink-3 hover:bg-paper-2 hover:text-ink"
      data-testid="topbar-citations"
      data-tour="tour-topbar-citations"
      type="button"
    >
      <span>
        cite
      </span>
    </button>
    <a
      aria-label="Enter focus mode"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 transition-colors hover:bg-paper-2 hover:text-ink"
      data-discover="true"
      data-state="closed"
      data-testid="focus-toggle"
      href="/s/s1/d/d1?focus=1"
      title="Focus (⌘\\)"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-maximize2 lucide-maximize-2 h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 3h6v6"
        />
        <path
          d="m21 3-7 7"
        />
        <path
          d="m3 21 7-7"
        />
        <path
          d="M9 21H3v-6"
        />
      </svg>
    </a>
    <button
      aria-label="Doc inspector"
      aria-pressed="false"
      class="items-center justify-center rounded-md transition-colors h-7 w-7 text-ink-3 hover:bg-paper-2 hover:text-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink data-[state=open]:bg-paper-2 data-[state=open]:text-ink hidden md:inline-flex"
      data-state="closed"
      data-testid="topbar-inspector-toggle"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
    </button>
  </header>
</div>
`;
